--- a/Webgunea/Css/ticketa.css
+++ b/Webgunea/Css/ticketa.css
@@ -10,26 +10,19 @@ body {
     background-color: #f8f8f8;
 }
 
-/* Estilo para el contenedor del formulario de inicio de sesión */
+/* Estilo para el contenedor del formulario */
 form {
-    width: 60%; /* Ajusta el ancho según tus preferencias */
-    max-width: 400px; /* Establece un ancho máximo */
+    width: 85%; /* Ajusta el ancho según tus preferencias */
+    max-width: 700px; /* Establece un ancho máximo */
     margin: 20px auto;
     background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
+    padding: 30px; /* Aumenta el padding */
+    border-radius: 15px; /* Aumenta el radio de borde */
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -70%);
-}
-
-/* Estilo para el título del formulario */
-.caption {
-    font-size: 1.5em;
-    margin-bottom: 20px;
 }
 
 /* Estilo para la lista no ordenada */
@@ -40,32 +33,33 @@ ul {
 
 /* Estilo para cada elemento de la lista */
 li {
-    margin-bottom: 15px;
+    margin-bottom: 20px; /* Aumenta el margen inferior */
 }
 
 /* Estilo para las etiquetas de los campos */
 label {
     display: block;
     font-weight: bold;
-    margin-bottom: 10   px;
+    margin-bottom: 10px; /* Aumenta el margen inferior */
+    font-size: 16px; /* Aumenta el tamaño de la fuente */
 }
 
-/* Estilo para los campos de entrada de texto y contraseña */
-input[type="text"],
-input[type="password"] {
+/* Estilo para los selectores */
+select, input[type="date"] {
     width: 100%;
-    padding: 10px;
+    padding: 15px; /* Aumenta el padding */
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 8px; /* Aumenta el radio de borde */
+    font-size: 16px; /* Aumenta el tamaño de la fuente */
 }
 
 /* Estilo para el botón de submit */
 input[type="submit"] {
-    background-color: #3498db;
+    background-color: #2ecc71;
     color: #fff;
-    padding: 12px 20px;
+    padding: 15px 25px; /* Aumenta el padding */
     border: none;
-    border-radius: 5px;
+    border-radius: 8px; /* Aumenta el radio de borde */
     cursor: pointer;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease-in-out;
@@ -73,5 +67,5 @@ input[type="submit"] {
 
 /* Estilo para el botón de submit al pasar el ratón por encima */
 input[type="submit"]:hover {
-    background-color: #2980b9;
+    background-color: #27ae60;
 }
